--- a/src/Components/Header/Logo/logo.module.scss
+++ b/src/Components/Header/Logo/logo.module.scss
@@ -1,5 +1,5 @@
-@import "src/assets/vars";
-@import "src/assets/mixins";
+@import "../../../assets/vars";
+@import "../../../assets/mixins";
 
 .logo {
   font-weight: 700;
